Update solar site

--- a/use_it/downloads/index.html
+++ b/use_it/downloads/index.html
@@ -194,7 +194,7 @@ window.cookieconsent.initialise({
 <div class="ulist none">
 <ul class="none">
 <li>
-<p><a href="https://solarframework.github.io//use_it/downloads/">installation</a></p>
+<p><a href="https://solarframework.github.io//use_it/downloads/">setup</a></p>
 </li>
 <li>
 <p><a href="https://solarframework.github.io//use_it/samples/">samples</a></p>
