--- a/use_it/samples/index.html
+++ b/use_it/samples/index.html
@@ -203,7 +203,7 @@ window.cookieconsent.initialise({
 <div class="ulist none">
 <ul class="none">
 <li>
-<p><a href="https://solarframework.github.io//use_it/downloads/">installation</a></p>
+<p><a href="https://solarframework.github.io//use_it/downloads/">setup</a></p>
 </li>
 <li>
 <p><a href="https://solarframework.github.io//use_it/samples/">samples</a></p>
@@ -228,7 +228,7 @@ window.cookieconsent.initialise({
 <h2 id="prerequesite"><a class="anchor" href="#prerequesite"></a><a class="link" href="#prerequesite">Prerequesite</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>You should have first installed SolAR binaries, please refer to the <a href="downloads.adoc"><strong>binaries</strong></a> part .</p>
+<p>You should have first installed SolAR binaries, please refer to the <a href="downloads"><strong>binaries</strong></a> part .</p>
 </div>
 <div class="paragraph">
 <p>Please check your SolAR directory :</p>
