--- a/use_it/tutorials/index.html
+++ b/use_it/tutorials/index.html
@@ -205,7 +205,7 @@ window.cookieconsent.initialise({
 <div class="ulist none">
 <ul class="none">
 <li>
-<p><a href="https://solarframework.github.io//use_it/downloads/">installation</a></p>
+<p><a href="https://solarframework.github.io//use_it/downloads/">setup</a></p>
 </li>
 <li>
 <p><a href="https://solarframework.github.io//use_it/samples/">samples</a></p>
@@ -547,33 +547,16 @@ The following schema presents the full pipeline we will implement next:</p>
 </div>
 <div class="sect2">
 <h3 id="instructions"><a class="anchor" href="#instructions"></a><a class="link" href="#instructions">Instructions</a></h3>
-<div class="sect3">
-<h4 id="initialize_your_development_project"><a class="anchor" href="#initialize_your_development_project"></a><a class="link" href="#initialize_your_development_project">Initialize your development project</a></h4>
-<div class="sect4">
-<h5 id="visual_studio"><a class="anchor" href="#visual_studio"></a><a class="link" href="#visual_studio">Visual Studio</a></h5>
 <div class="paragraph">
-<p>To do
-===== QT Creator
-If you are using QT Creator, open it and create a new project (in File menu). Choose "Non-Qt project" and "Plain C++ Application", set the location and the name of your project (for example SolARFiducialTutorial), and select as build system "qmake", and then the building kit of your choice. Finally, click on finish to create your project.
-Now, you need to select the file called "SolARFiducialTutorial.pro" in your project tree, and you have to add the following line before defining your source files:</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="CodeRay highlight nowrap"><code>DEPENDENCIESCONFIG = sharedlib
-include ($$(BCOMDEVROOT)/builddefs/qmake/templateappconfig.pri)</code></pre>
-</div>
-</div>
-<div class="paragraph">
-<p>Be sure to have defined your environment variable <em>$BCOMDEVROOT$</em> and to have copied in this folder all the files defining your build pipeline downloadable <a href="https://github.com/b-com-software-basis/builddefs-qmake/releases/tag/solar_v1.0.0">here</a>. If not, download the zip file, unzip it, and copy the content of the folder <em>builddefs-qmake-solar_v1.0.0</em> in <em>$BCOMDEVROOT$/builddefs/qmake/</em>.</p>
-</div>
-<div class="paragraph">
-<p>Then, create in your project folder a file called <em>packagedependencies.txt</em> and add in it your dependencies, namely the basic dependencies required by the SolARFramework (SolARFramework, xpcf, boost, eigen and spdlog) as well as the one required for the openCV module (SolARModuleOpencv and opencv):</p>
+<p>First, create a new QTcreator porject and follow the instructions available in the hello World tutorial (add link).
+As you need both OpenCV and Tools modules, you will need to add both of them as well as third parties in the packagedependencies.txt file:</p>
 </div>
 <div class="listingblock">
 <div class="content">
 <pre class="CodeRay highlight nowrap"><code>SolARFramework|1.0.0|SolARFramework|bcomBuild|url_repo_artifactory
-SolARContainerOpenCV|1.0.0|SolARContainerOpenCV|bcomBuild|url_repo_artifactory
-xpcf|1.0.0|xpcf|bcomBuild|http://repository.b-com.com/
+SolARModuleOpenCV|1.0.0|SolARModuleOpenCV|bcomBuild|url_repo_artifactory
+SolARModuleTools|1.0.0|SolARModuleTools|bcomBuild|url_repo_artifactory
+xpcf|1.0.0|xpcf|thirdParties|http://repository.b-com.com/
 boost|1.64.0|boost|thirdParties|http://repository.b-com.com/
 opencv|3.2.0|opencv|thirdParties|http://repository.b-com.com/
 spdlog|1.0.0|spdlog|thirdParties|http://repository.b-com.com/
@@ -582,7 +565,6 @@ eigen|3.3.4|eigen|thirdParties|http://repository.b-com.com/amc-generic</code></p
 </div>
 <div class="paragraph">
 <p>Now you can run QMake (click right of your project in QT creator, and click on <em>run QMake</em>). Every pathes for headers and library links are now set.</p>
-</div>
 </div>
 <div class="sect4">
 <h5 id="main_cpp"><a class="anchor" href="#main_cpp"></a><a class="link" href="#main_cpp">main.cpp</a></h5>
@@ -884,7 +866,6 @@ overlay3D-&gt;setCameraParameters(camera-&gt;getIntrinsicsParameters(), camera-&
 <h5 id="display_a_cube"><a class="anchor" href="#display_a_cube"></a><a class="link" href="#display_a_cube">Display a cube</a></h5>
 <div class="paragraph">
 <p>to complete</p>
-</div>
 </div>
 </div>
 </div>
