--- a/use_it.html
+++ b/use_it.html
@@ -203,7 +203,7 @@ window.cookieconsent.initialise({
 <div class="ulist none">
 <ul class="none">
 <li>
-<p><a href="https://solarframework.github.io//use_it/downloads/">installation</a></p>
+<p><a href="https://solarframework.github.io//use_it/downloads/">setup</a></p>
 </li>
 <li>
 <p><a href="https://solarframework.github.io//use_it/samples/">samples</a></p>
@@ -235,14 +235,14 @@ window.cookieconsent.initialise({
 <div class="ulist">
 <ul>
 <li>
-<p>download and execute the SolAR installer. It will install all you need to user SolAR Framework. <a href="downloads"><strong>binaries</strong></a>.  It will only take 15 minutes .</p>
+<p>download and execute the SolAR installer. It will install all you need to user SolAR Framework. <a href="use_it/downloads"><strong>binaries</strong></a>.  It will only take 15 minutes .</p>
 </li>
 <li>
 <p>download and test solAR sample code :samples[<strong>sample codes</strong>], compile it and run it. You will learn about SolARFramework use (code organization, API call) . It will take about 30 minutes.</p>
 </li>
 <li>
 <p>implement your own program based on SolAR: to help you some tutorials will soon be available.
-<a href="tutorials"><strong>tutorials</strong></a> and do some exercises. You will learn more about SolARFramework, so that you will be able to program a code based on SolAR framework by your own.
+<a href="use_it/tutorials"><strong>tutorials</strong></a> and do some exercises. You will learn more about SolARFramework, so that you will be able to program a code based on SolAR framework by your own.
 //It will take more time, depending on which level of expertise you want.</p>
 </li>
 </ul>
