Update solar site

--- a/use_it.html
+++ b/use_it.html
@@ -214,6 +214,9 @@ window.cookieconsent.initialise({
 <li>
 <p><a href="https://solarframework.github.io//use_it/tools/">tools</a></p>
 </li>
+<li>
+<p><a href="https://solarframework.github.io//use_it/programmer_guide/">programmer&#8217;s guide</a></p>
+</li>
 </ul>
 </div>
 </div>
@@ -238,7 +241,7 @@ window.cookieconsent.initialise({
 <p>download and execute the SolAR installer. It will install all you need to user SolAR Framework. <a href="use_it/downloads"><strong>binaries</strong></a>.  It will only take 15 minutes .</p>
 </li>
 <li>
-<p>download and test solAR sample code :samples[<strong>sample codes</strong>], compile it and run it. You will learn about SolARFramework use (code organization, API call) . It will take about 30 minutes.</p>
+<p>download and test solAR sample code : <a href="_use_it/samples"><strong>sample codes</strong></a>, compile it and run it. You will learn about SolARFramework use (code organization, API call) . It will take about 30 minutes.</p>
 </li>
 <li>
 <p>implement your own program based on SolAR: to help you some tutorials will soon be available.
