--- a/use_it/downloads/index.html
+++ b/use_it/downloads/index.html
@@ -205,8 +205,60 @@ window.cookieconsent.initialise({
 <li>
 <p><a href="https://solarframework.github.io//use_it/tools/">tools</a></p>
 </li>
+<li>
+<p><a href="https://solarframework.github.io//use_it/programmer_guide/">programmer&#8217;s guide</a></p>
+</li>
 </ul>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="development_overview"><a class="anchor" href="#development_overview"></a><a class="link" href="#development_overview">Development overview</a></h2>
+<div class="sectionbody">
+<table class="tableblock frame-topbot grid-all" style="width: 70%;">
+<caption class="title">Table 1. What you need</caption>
+<colgroup>
+<col style="width: 33.3333%;">
+<col style="width: 33.3333%;">
+<col style="width: 33.3334%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">you want to</th>
+<th class="tableblock halign-left valign-top">Use SolAR ramework</th>
+<th class="tableblock halign-left valign-top">Contribute to SolAR framework</th>
+</tr>
+</thead>
+<tfoot>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolAR module  source code</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">no</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
+</tr>
+</tfoot>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARFramework   setup</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">no</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARFramework   third parties</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">QT or Visual C++</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">SolARFramework   source code</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">no</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">yes</p></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 <div class="sect1">
