Update solar site

--- a/contribute/index.html
+++ b/contribute/index.html
@@ -443,24 +443,41 @@ window.cookieconsent.initialise({
 
         <div class="container">
             <div class="well">
-              <div class="paragraph">
-<p>A SolAR Marker is a structure describing a convex area in a SolAR Image. A SolAR Marker allows managing different types of markers such ad fiducial markers or checker boards. It encodes shape and pose information as follows:</p>
+              <div id="toc" class="toc">
+<div id="toctitle">Table of Contents</div>
+<ul class="sectlevel1">
+<li><a href="#contribute">Contribute</a></li>
+</ul>
+</div>
+<div class="sect1">
+<h2 id="contribute"><a class="anchor" href="#contribute"></a><a class="link" href="#contribute">Contribute</a></h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>There are several ways to contribute to SolAR framework.</p>
+</div>
+<div class="paragraph">
+<p>You can :</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Edges</strong>: a set of <em>SolARPoint_2Df</em> defining the convex area. A fiducial marker can be described with four edges. The order of the points is important and impacts the structure of the marker</p>
+<p>contribute to Core framework, by defining API, architecture, framework tools &#8230;&#8203; this typically needs software engineering and architecture skills.</p>
 </li>
 <li>
-<p><strong>Translation</strong>: a <em>SolARVector3f</em> defining the translation of the marker relative to the camera</p>
-</li>
-<li>
-<p><strong>Rotation</strong>: a <em>SolARRotationMatrixf</em>  defining the rotation of the marker relative to the camera</p>
+<p>contribute to Components, by creating a new SolAR component, that can be used in a pose estimation solution&#8230;&#8203; this typically needs computer vision skills (and software skills).</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<p>The SolAR Marker embeds information about the marker in a minimalist way. The reason is directly linked to the desired genericity across all the existing markers in the state-of-the-art methods.</p>
+<p>To know more about it works, please refer to the <a href="how_it_works/">how it works</a> section.</p>
+</div>
+<div class="paragraph">
+<p>Please feel free to contact us !</p>
+</div>
+<div class="paragraph">
+<p>Please contribute !</p>
+</div>
+</div>
 </div>
             </div>
         </div>
