Update solar site

--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -51,6 +51,7 @@
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
           ga('create', 'UA-107058603-1', 'auto');
+          ga('set', 'anonymizeIp', true);
           ga('send', 'pageview');
   </script>  <!-- End Google Analytics --> 
 <link rel="stylesheet" type="text/css" href="/js/cookieconsent/cookieconsent.min.css" />
@@ -254,10 +255,10 @@ window.cookieconsent.initialise({
 <p>You can find here a document describing use case identified for the industry.</p>
 </div>
 <div class="paragraph">
-<p><a href="https://github.com/SolarFramework/binaries/releases/download/Documentsen/ARGO-Factory-Rapport-pour-publication-e.pdf">english version</a></p>
+<p><a href="https://github.com/SolarFramework/binaries/releases/download/Documentsen/ARGO-Factory-Rapport-pour-publication-e.pdf">English version</a></p>
 </div>
 <div class="paragraph">
-<p><a href="https://github.com/SolarFramework/binaries/releases/download/Documents/ARGO-Factory-Rapport-pour.publication-f.pdf">french version</a></p>
+<p><a href="https://github.com/SolarFramework/binaries/releases/download/Documents/ARGO-Factory-Rapport-pour.publication-f.pdf">French version</a></p>
 </div>
 </div>
 </div>
