Update solar site

--- a/discover/legal_notice/index.html
+++ b/discover/legal_notice/index.html
@@ -314,14 +314,14 @@ Site host: GitHub Inc.</p>
 <div class="sect2">
 <h3 id="copyright"><a class="anchor" href="#copyright"></a><a class="link" href="#copyright">Copyright</a></h3>
 <div class="paragraph">
-<p>The pictures, logos and videos on this website "solarframework.github.io" are protected by intellectual property laws and may not be copied or imitated in whole or in part. None of them may be reproduced without the consent of their owners or copyright holders.</p>
+<p>The pictures, logos and videos on this website "www.solarframework.org" are protected by intellectual property laws and may not be copied or imitated in whole or in part. None of them may be reproduced without the consent of their owners or copyright holders.</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="hyperlinks"><a class="anchor" href="#hyperlinks"></a><a class="link" href="#hyperlinks">Hyperlinks</a></h3>
 <div class="paragraph">
-<p>The website "solarframework.github.io" includes links to other sites.<br>
-These pages are not part of the site "solarframework.github.io", whose editorial staff is not responsible and cannot be held liable for the content and information published on those sites. Links to third-party sites are provided for the sake of convenience only, and their content cannot be guaranteed.</p>
+<p>The website "www.solarframework.org" includes links to other sites.<br>
+These pages are not part of the site "www.solarframework.org", whose editorial staff is not responsible and cannot be held liable for the content and information published on those sites. Links to third-party sites are provided for the sake of convenience only, and their content cannot be guaranteed.</p>
 </div>
 </div>
 <div class="sect2">
