--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -238,6 +238,17 @@ window.cookieconsent.initialise({
 	
 
 		<li >
+			<a href="/discover/when/">
+				when
+				
+			</a>
+		</li>
+	
+
+	
+	
+
+		<li >
 			<a href="/discover/for_whom/">
 				for whom
 				
@@ -288,7 +299,7 @@ window.cookieconsent.initialise({
 
         <div class="container">
             <div class="well">
-              <h1>Knowledge</h1>
+              <h1>Applications</h1>
 <div class="sect1">
 <h2 id="documents"><a class="anchor" href="#documents"></a><a class="link" href="#documents">Documents</a></h2>
 <div class="sectionbody">
