--- a/discover/when/index.html
+++ b/discover/when/index.html
@@ -237,6 +237,17 @@ window.cookieconsent.initialise({
 	
 	
 
+		<li  class="active currentPage">
+			<a href="/discover/when/">
+				when
+				
+			</a>
+		</li>
+	
+
+	
+	
+
 		<li >
 			<a href="/discover/for_whom/">
 				for whom
