Update solar site

--- a/contribute/getting_started_windows/index.html
+++ b/contribute/getting_started_windows/index.html
@@ -461,7 +461,8 @@ window.cookieconsent.initialise({
 
         <div class="container">
             <div class="well">
-              <div id="toc" class="toc">
+              <h1>getting started windows</h1>
+<div id="toc" class="toc">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#install_your_ide_for_windows">Install your IDE for windows</a></li>
