--- a/use_it/setup/index.html
+++ b/use_it/setup/index.html
@@ -475,7 +475,7 @@ window.cookieconsent.initialise({
 <thead>
 <tr>
 <th class="tableblock halign-left valign-top">you want to</th>
-<th class="tableblock halign-left valign-top">Use SolAR ramework</th>
+<th class="tableblock halign-left valign-top">Use SolAR framework</th>
 <th class="tableblock halign-left valign-top">Contribute to SolAR framework</th>
 </tr>
 </thead>
@@ -625,174 +625,8 @@ to learn the basics of SolAR.</p>
 <div class="sect1">
 <h2 id="install_your_c_ide_for_windows"><a class="anchor" href="#install_your_c_ide_for_windows"></a><a class="link" href="#install_your_c_ide_for_windows">Install your C++ IDE for windows</a></h2>
 <div class="sectionbody">
-<div class="sect2">
-<h3 id="pre_requisites"><a class="anchor" href="#pre_requisites"></a><a class="link" href="#pre_requisites">Pre-requisites</a></h3>
 <div class="paragraph">
-<p>Install pkgconfig, sourcetree, python3 and jre.</p>
-</div>
-<div class="hdlist">
-<table>
-<tr>
-<td class="hdlist1">
-<strong>pkg-config</strong>
-</td>
-<td class="hdlist2">
-<p>pkg-config is a helper tool used when compiling applications and libraries.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Download the setup program here:
-<a href="https://github.com/SolarFramework/binaries/releases/download/pkgconfig%2Fwin/Setup_pkg-config.exe" class="bare">https://github.com/SolarFramework/binaries/releases/download/pkgconfig%2Fwin/Setup_pkg-config.exe</a></p>
-</li>
-</ul>
-</div>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<strong>Sourcetree</strong>
-</td>
-<td class="hdlist2">
-<p>Sourcetree is a free git client for windows and mac.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Download it on the following web site:
- <a href="https://www.sourcetreeapp.com/" class="bare">https://www.sourcetreeapp.com/</a>
-During Sourcetree installation, choose to download the embedded version of git program.</p>
-</li>
-</ul>
-</div>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<strong>python3</strong>
-</td>
-<td class="hdlist2">
-<p>Python is a widely used high-level programming language for general-purpose programming. Python3 is requiredby SolAR in order to create new components, based on templates.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Download the latest version of python3 for windows here:
-<a href="https://www.python.org/downloads/" class="bare">https://www.python.org/downloads/</a></p>
-</li>
-</ul>
-</div>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<strong>jre</strong>
-</td>
-<td class="hdlist2">
-<p>Java Runtime Environment, or JRE, is required in order to download third parties libraries based on your environment.</p>
-<div class="ulist">
-<ul>
-<li>
-<p>You can download JRE here:
-<a href="http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html" class="bare">http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html</a></p>
-</li>
-</ul>
-</div>
-</td>
-</tr>
-</table>
-</div>
-<div class="paragraph">
-<p>You can use or QT creator, or Visual.</p>
-</div>
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-note" title="Note"></i>
-</td>
-<td class="content">
-QT creator is recommended.
-</td>
-</tr>
-</table>
-</div>
-</div>
-<div class="sect2">
-<h3 id="install_qt_creator"><a class="anchor" href="#install_qt_creator"></a><a class="link" href="#install_qt_creator">Install QT creator</a></h3>
-<div class="paragraph">
-<p>Install QT community by downloading and launching the following file:</p>
-</div>
-<div class="literalblock">
-<div class="content">
-<pre>http://download.qt.io/official_releases/online_installers/qt-unified-windows-x86-online.exe</pre>
-</div>
-</div>
-<div class="paragraph">
-<p>During installation choose a minimal QT 5.9.0 with msvc2015 64bits, and QT Tools→QT creator (default selection) only</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="check_your_qt_configuration"><a class="anchor" href="#check_your_qt_configuration"></a><a class="link" href="#check_your_qt_configuration">Check your QT configuration</a></h3>
-<div class="paragraph">
-<p>Open the "tools/options" window and section "build and run"; please check compiler and debugger is installed. Every tab should be filled in.</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Compiler</p>
-</li>
-</ul>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="data:image/png;base64," alt="env" width="700">
-</div>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Debugger</p>
-</li>
-</ul>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="data:image/png;base64," alt="env" width="700">
-</div>
-</div>
-<div class="paragraph">
-<p>If not, make sure your Visual installation is complete (see sections just above).</p>
-</div>
-<div class="paragraph">
-<p>If Qt does not autodetect the windows debugger, you might need to manually install the debugging tools for Windows, as stated on  [<a href="http://doc.qt.io/qtcreator/creator-debugger-engines.html" class="bare">http://doc.qt.io/qtcreator/creator-debugger-engines.html</a> this Qt Page].
-You can get the Windows Driver Kit that contains the debugging tools from [<a href="https://developer.microsoft.com/en-us/windows/hardware/windows-driver-kit" class="bare">https://developer.microsoft.com/en-us/windows/hardware/windows-driver-kit</a> this page].</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="install_visual_studio"><a class="anchor" href="#install_visual_studio"></a><a class="link" href="#install_visual_studio">Install Visual Studio</a></h3>
-<div class="paragraph">
-<p>You can either install Visual Community 2015 (adapted for OpenSource) or install Visual Studio 2015.</p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="data:image/png;base64," alt="https://b-com.com/en">
-</div>
-</div>
-</div>
-<div class="sect2">
-<h3 id="check_visual_studio_c_c_compiler_is_installed_correctly"><a class="anchor" href="#check_visual_studio_c_c_compiler_is_installed_correctly"></a><a class="link" href="#check_visual_studio_c_c_compiler_is_installed_correctly">Check Visual Studio C /C ++compiler is installed correctly</a></h3>
-<div class="paragraph">
-<p>Create a new C++ project and follow steps advised by the prompt.</p>
-</div>
-<div class="paragraph">
-<p>If the compiler is not installed, you will have an option to install it right from the new project window.</p>
-</div>
-<div class="paragraph">
-<p>You should verify you are able to run a console application "hello world" in C++.</p>
-</div>
-<div class="imageblock">
-<div class="content">
-<img src="data:image/png;base64," alt="https://b-com.com/en">
-</div>
-</div>
+<p>Please refer to "the getting started with windows" part of the website link: <a href="https://solarframework.github.io/contribute/getting_started_windows/#install_your_ide_for_windows">here</a></p>
 </div>
 </div>
 </div>
