Update solar site

--- a/contribute/GIT/index.html
+++ b/contribute/GIT/index.html
@@ -465,10 +465,17 @@ window.cookieconsent.initialise({
 <div id="toc" class="toc">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
+<li><a href="#git">GIT</a></li>
 <li><a href="#access_to_code_source_here">Access to code source here</a></li>
 <li><a href="#access_to_issues_and_pull_requests">Access to Issues and Pull Requests</a></li>
 <li><a href="#issues_and_discussions_about_solar_framework">issues and discussions about SolAR framework</a></li>
 </ul>
+</div>
+<div class="sect1">
+<h2 id="git"><a class="anchor" href="#git"></a><a class="link" href="#git">GIT</a></h2>
+<div class="sectionbody">
+
+</div>
 </div>
 <div class="sect1">
 <h2 id="access_to_code_source_here"><a class="anchor" href="#access_to_code_source_here"></a><a class="link" href="#access_to_code_source_here">Access to code source here</a></h2>
