--- a/contribute/getting_started_linux/index.html
+++ b/contribute/getting_started_linux/index.html
@@ -465,7 +465,9 @@ window.cookieconsent.initialise({
 <div id="toc" class="toc">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
+<li><a href="#getting_started_linux">getting started linux</a></li>
 <li><a href="#install_your_ide_on_linux">Install your IDE on Linux</a></li>
+<li><a href="#install_ide_linux">Install IDE linux</a></li>
 <li><a href="#install_and_build_solar_framework_in_less_than_10_minutes_script_beta_version">Install and build SolAR Framework in less than 10 minutes (script BETA VERSION)</a></li>
 <li><a href="#test_your_first_solar_program">Test your first SolAR program</a></li>
 <li><a href="#look_at_your_solarframework_folder">Look at your SolARframework folder</a></li>
@@ -476,7 +478,19 @@ window.cookieconsent.initialise({
 </ul>
 </div>
 <div class="sect1">
+<h2 id="getting_started_linux"><a class="anchor" href="#getting_started_linux"></a><a class="link" href="#getting_started_linux">getting started linux</a></h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
 <h2 id="install_your_ide_on_linux"><a class="anchor" href="#install_your_ide_on_linux"></a><a class="link" href="#install_your_ide_on_linux">Install your IDE on Linux</a></h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="install_ide_linux"><a class="anchor" href="#install_ide_linux"></a><a class="link" href="#install_ide_linux">Install IDE linux</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Install your environment following these guidelines:
