--- a/contribute/getting_started_windows/index.html
+++ b/contribute/getting_started_windows/index.html
@@ -465,7 +465,9 @@ window.cookieconsent.initialise({
 <div id="toc" class="toc">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
+<li><a href="#getting_started_windows">getting started windows</a></li>
 <li><a href="#install_your_ide_for_windows">Install your IDE for windows</a></li>
+<li><a href="#install_ide_windows">Install IDE windows</a></li>
 <li><a href="#install_and_build_solar_framework_universal_procedure">Install and build SolAR Framework (universal procedure)</a></li>
 <li><a href="#directories">directories</a></li>
 <li><a href="#downloads">downloads</a></li>
@@ -475,7 +477,19 @@ window.cookieconsent.initialise({
 </ul>
 </div>
 <div class="sect1">
+<h2 id="getting_started_windows"><a class="anchor" href="#getting_started_windows"></a><a class="link" href="#getting_started_windows">getting started windows</a></h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
 <h2 id="install_your_ide_for_windows"><a class="anchor" href="#install_your_ide_for_windows"></a><a class="link" href="#install_your_ide_for_windows">Install your IDE for windows</a></h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="install_ide_windows"><a class="anchor" href="#install_ide_windows"></a><a class="link" href="#install_ide_windows">Install IDE windows</a></h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="pre_requisites"><a class="anchor" href="#pre_requisites"></a><a class="link" href="#pre_requisites">Pre-requisites</a></h3>
