Update solar site

--- a/use_it/setup/index.html
+++ b/use_it/setup/index.html
@@ -631,6 +631,14 @@ to learn the basics of SolAR.</p>
 </div>
 </div>
 <div class="sect1">
+<h2 id="solarframework_installer_for_linux"><a class="anchor" href="#solarframework_installer_for_linux"></a><a class="link" href="#solarframework_installer_for_linux">SolarFramework Installer for linux</a></h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>There is not a simplified installer for Linux, but you can use the same procedure as for contribtuting there : link: <a href="../contribute/contribute/getting_started_linux/"><strong>getting started linux</strong></a>.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="frequently_asked_questions"><a class="anchor" href="#frequently_asked_questions"></a><a class="link" href="#frequently_asked_questions">Frequently Asked Questions</a></h2>
 <div class="sectionbody">
 <div class="qlist qanda">
